// RUN `go generate` in this directory when updating the service.proto. Requires the protoc command to be in your path.
syntax = "proto3";
package walletrpc;

option go_package = "walletrpc";

message Credentials {
  string wallet_name = 1;
  string pass_phrase = 2;
}

message SerializableSignature {
  repeated bool signers = 1;
  bytes signature = 2;
  string type = 3;
}

message SerializableChainTree {
  repeated bytes dag = 1;
  map<string, SerializableSignature> signatures = 2;
  // tip is a string because of compatability with the javascript layer
  // which cannot seem to parse a golang cid.Bytes()
  string tip = 3;
}

message RegisterWalletRequest {
  Credentials creds = 1;
}

message RegisterWalletResponse {
  string wallet_name = 1;
}

message StorageAdapterConfigForBadger {
  string path = 1;
}

message StorageAdapterConfigForIpld {
  string path = 1;
  bool offline = 2;
}

message StorageAdapterConfig {
  oneof adapter_config {
    StorageAdapterConfigForBadger badger = 1;
    StorageAdapterConfigForIpld ipld = 2;
  }
}

message GenerateChainRequest {
  Credentials creds = 1;
  string key_addr = 2;
  StorageAdapterConfig storage_adapter = 3;
}

message GenerateChainResponse {
  string chain_id = 1;
}

message ExportChainRequest {
  Credentials creds = 1;
  string chain_id = 2;
}

message ExportChainResponse {
  string chain_tree = 1;
}

message ImportChainRequest {
  Credentials creds = 1;
  // index 2 is a deleted key, intentionally omitted
  string chain_tree = 3;
  StorageAdapterConfig storage_adapter = 4;
}

message ImportChainResponse {
  string chain_id = 1;
}

message GenerateKeyRequest {
  Credentials creds = 1;
}

message GenerateKeyResponse {
  string key_addr = 1;
}

message GetTipRequest {
  Credentials creds = 1;
  string chain_id = 2;
}

message GetTipResponse {
  string tip = 1;
}

message ListChainIdsRequest {
  Credentials creds = 1;
}

message ListChainIdsResponse {
  repeated string chain_ids = 1;
}

message ListKeysRequest {
  Credentials creds = 1;
}

message ListKeysResponse {
  repeated string key_addrs = 1;
}

message SetOwnerRequest {
  Credentials creds = 1;
  string chain_id = 2;
  string key_addr = 3;
  repeated string new_owner_keys = 4;
}

message SetOwnerResponse {
  string tip = 1;
}

message SetDataRequest {
  Credentials creds = 1;
  string chain_id = 2;
  string key_addr = 3;
  string path = 4;
  bytes value = 5;
}

message SetDataResponse {
  string tip = 1;
}

message ResolveRequest {
  Credentials creds = 1;
  string chain_id = 2;
  string path = 3;
}

message ResolveResponse {
  string remaining_path = 1;
  bytes data = 2;
}

message EstablishTokenRequest {
  Credentials creds = 1;
  string chain_id = 2;
  string key_addr = 3;
  string token_name = 4;
  uint64 maximum = 5;
}

message EstablishTokenResponse {
  string tip = 1;
}

message MintTokenRequest {
  Credentials creds = 1;
  string chain_id = 2;
  string key_addr = 3;
  string token_name = 4;
  uint64 amount = 5;
}

message MintTokenResponse {
  string tip = 1;
}

service WalletRPCService {
  rpc Register (RegisterWalletRequest) returns (RegisterWalletResponse);
  rpc GenerateKey (GenerateKeyRequest) returns (GenerateKeyResponse);
  rpc CreateChainTree (GenerateChainRequest) returns (GenerateChainResponse);
  rpc ExportChainTree (ExportChainRequest) returns (ExportChainResponse);
  rpc ImportChainTree (ImportChainRequest) returns (ImportChainResponse);
  rpc GetTip (GetTipRequest) returns (GetTipResponse);
  rpc ListChainIds (ListChainIdsRequest) returns (ListChainIdsResponse);
  rpc ListKeys (ListKeysRequest) returns (ListKeysResponse);
  rpc SetOwner (SetOwnerRequest) returns (SetOwnerResponse);
  rpc SetData (SetDataRequest) returns (SetDataResponse);
  rpc Resolve (ResolveRequest) returns (ResolveResponse);
  rpc EstablishToken (EstablishTokenRequest) returns (EstablishTokenResponse);
  rpc MintToken (MintTokenRequest) returns (MintTokenResponse);
}
